compiling_error.txt
/Users/richa/Desktop/c++/helloworld.cpp:72:10: error: use of undeclared identifier 'age'
  cin >> age;
         ^
/Users/richa/Desktop/c++/helloworld.cpp:74:25: error: use of undeclared identifier 'age'
  cout << "You are " << age << " years old." << endl;
                        ^
2 errors generated.
